2011-02-02  Cris Neckar  <cdn@chromium.org>

        Reviewed by James Robinson.

        Tests for crash when a domwindow is removed within a device orientation event.
        https://bugs.webkit.org/show_bug.cgi?id=53623

        * fast/events/device-orientation-crash-expected.txt: Added.
        * fast/events/device-orientation-crash.html: Added.

2011-02-02  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        A deleted object should never been bound again
        https://bugs.webkit.org/show_bug.cgi?id=53604

        * fast/canvas/webgl/object-deletion-behaviour-expected.txt:
        * fast/canvas/webgl/object-deletion-behaviour.html: Add test cases for object binding and deletion.

2011-02-02  Kenneth Russell  <kbr@google.com>

        Reviewed by James Robinson.

        Rename Typed Array subset to subarray
        https://bugs.webkit.org/show_bug.cgi?id=53618

        * fast/canvas/webgl/array-setters.html:
        * fast/canvas/webgl/array-unit-tests-expected.txt:
        * fast/canvas/webgl/array-unit-tests.html:
        * fast/canvas/webgl/draw-elements-out-of-bounds-expected.txt:
        * fast/canvas/webgl/draw-elements-out-of-bounds.html:
        * fast/canvas/webgl/webgl-array-invalid-ranges-expected.txt:
        * fast/canvas/webgl/webgl-array-invalid-ranges.html:

2011-02-02  Dimitri Glazkov  <dglazkov@chromium.org>

        Added GPU fails from bots.

        * platform/chromium-gpu/test_expectations.txt: Added.

2011-02-02  Martin Robinson  <mrobinson@igalia.com>

        Unskip a test that just needs platform-specific results. Re-classify
        two other failures with more pertinent information.

        * platform/gtk/Skipped: Organize the skipped list a bit. Unskip a test.
        Remove obsolete comments.
        * platform/gtk/editing/inserting/5994480-2-expected.txt: Added.

2011-02-01  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.
