@@ -8,7 +8,10 @@ PASS array is non-null.
 PASS [object WebGLBuffer] is non-null.
 PASS getError was expected value: INVALID_OPERATION : 
 PASS getError was expected value: NO_ERROR : 
+PASS getError was expected value: INVALID_VALUE : 
 PASS getError was expected value: NO_ERROR : 
+PASS getError was expected value: INVALID_VALUE : 
+PASS getError was expected value: INVALID_VALUE : 
 PASS getError was expected value: NO_ERROR : 
 PASS getError was expected value: NO_ERROR : 
 PASS successfullyParsed is true
