@@ -28,6 +28,9 @@ glErrorShouldBe(gl, gl.INVALID_OPERATION);
 gl.bindBuffer(gl.ARRAY_BUFFER, buf);
 glErrorShouldBe(gl, gl.NO_ERROR);
 
+gl.bufferData(gl.ARRAY_BUFFER, -10, gl.STATIC_DRAW);
+glErrorShouldBe(gl, gl.INVALID_VALUE);
+
 // This should not crash, but the selection of the overload is ambiguous per Web IDL.
 gl.bufferData(gl.ARRAY_BUFFER, null, gl.STATIC_DRAW);
 gl.getError();
@@ -36,6 +39,12 @@ gl.bufferData(gl.ARRAY_BUFFER, array, gl.STATIC_DRAW);
 glErrorShouldBe(gl, gl.NO_ERROR);
 
 array = new ArrayBuffer(64);
+
+gl.bufferSubData(gl.ARRAY_BUFFER, -10, array);
+glErrorShouldBe(gl, gl.INVALID_VALUE);
+
+gl.bufferSubData(gl.ARRAY_BUFFER, -10, new Float32Array(8));
+glErrorShouldBe(gl, gl.INVALID_VALUE);
 
 gl.bufferSubData(gl.ARRAY_BUFFER, 10, array);
 glErrorShouldBe(gl, gl.NO_ERROR);
