@@ -1,3 +1,13 @@
+2011-02-02  Zhenyao Mo  <zmo@google.com>
+
+        Reviewed by Kenneth Russell.
+
+        bufferData and bufferSubData should generate INVALID_VALUE with negative input
+        https://bugs.webkit.org/show_bug.cgi?id=53626
+
+        * fast/canvas/webgl/buffer-data-array-buffer-expected.txt:
+        * fast/canvas/webgl/buffer-data-array-buffer.html:
+
 2011-02-02  Cris Neckar  <cdn@chromium.org>
 
         Reviewed by James Robinson.
